@@ -1,4 +1,4 @@
 DIST libmt_client-0.1.98.tar.bz2 146319 SHA256 e9f9fab225a8fb6462b8b32737253925735a1069383574a324ef0cd35330b71c SHA512 1eb53bd36a171dbc3138942ec8314aaf8a71ca207060ea6d7499d18c2680fe8ebc822d8ec9843675a7c329039d2c985783f239b74b13c004e47a38250a8c4411 WHIRLPOOL cde4fafc73d675ebc53b93c93ccae435e39e7a279de22ed709d6a06fa7cc120ca86728f53de9ab940e2f8aaeb724b0fcc468b0fbb87de969e7e2915b103f642d
-EBUILD libmt_client-0.1.98.ebuild 660 SHA256 341727df6a3716a8a431537bc00c2bb98d4e281f7eb17ee3d3cc1f360fc4df4f SHA512 efc08407349faca59bf46b3e5a57356233784073c02b22864795ee7fc5c46b269fef5c7e0d47c74d003cc4609a1036d90d88f8b92d1388e0029f0807238357a5 WHIRLPOOL 613f00bcc3623d69fda78def45dcf6f9ec558abe29eea3a4fe44d8580e96ae5ce367b694564dd9f7c67ba4dba9158e999433850fd60156076966443e75e04aa2
-MISC ChangeLog 711 SHA256 1fbf54488c5f5551980415fd1df1effc9e727cafeba5a3105499de5cce50095b SHA512 03334062ad5fb6349287fe45a323366db10ab2c3ebe060627e31a3524a1a4206256c511e4704768614acce2d4c637c2aae05e69c735e1a00eef231082a3694b9 WHIRLPOOL d3f3461bfce7157b59d1c4f7274ccd64ec0c4d15b55b4aa50aefc08cf80d56a1369b61ebac428438ca7be5345bd3ca3c8c68f7b95d7d1bf9ed05c09ef28b6462
+EBUILD libmt_client-0.1.98.ebuild 582 SHA256 ed2bb541a5c12d4cfd3a10a3c0f3805c374a61224a3258998551cd963da8be6a SHA512 f920a1910a1c83d12bacd2fe35dbc6bd09623e0ceedf5376107e98343f79d360e7f1d08f80e25f2dc629c7a68027e11cebbf56a2e3d2c67fc026ac033c6102fc WHIRLPOOL d9af66d043bf35ec554302c37498a49bddd2f84420effbc55bc7bc5b4cc570e52e1d8428af1c339c9ddb65062f6f9b4593a4600f8003384393f8cb67cdbba955
+MISC ChangeLog 807 SHA256 10caf30a51b7ed3ac777387d83f5cc46ee3b8b2eab5180c9b38ba98a0b978e75 SHA512 f7cf1791971599538c728d0d4aa8cbc42590a2a098f04e37181a71cfa2bd0f892fe57624c7085f016e73cdd7c2a929cbe520b8b49b40ea729495e6c1d33e4553 WHIRLPOOL a3fb439682e6347ce6b6a71b24907f7ba33050846309bb1fa56a6b918fe05ce573b93098f95f63301c9b870a7acdfe570a54bdc7c90dddda46aaa6267f8139f4
 MISC metadata.xml 808 SHA256 b7900d4d43b04e2673d60b77d679dacf03e2d94af0364651da88476f0c12262b SHA512 c0db0c0782c4bc0addb4a9a9070a7b21bb96b0cbee4d926be8e32590d53192d36dac493d8bec4114464babe8326e00107f884191701f3cf470270354d8b34d4a WHIRLPOOL e416632367a6880b85d0855c6df2c2ab2f1a05824d1d55f792a9177c55b1576efeab63c091a4f9d292e56407bbd60ba6ad8d94da0f4584b057f198e2e7f18e84
