@@ -1,5 +1,5 @@
 AUX CMakeLists.txt 1788 SHA256 9635835bcfe422b36abc499f6e4693babf7579d80f25de5dee987d58c2c42754 SHA512 0a376c8d4c6ee09e1abd1625f19cde5dbbb5b04d147335d23ce2521dd698cbf8e6c8160ef9070856b4c617156f0ec59373dae7939d798963cb77b836f09ae0bb WHIRLPOOL 590c1e26e0796a52b813cd77db54e1251d03e884f0e70ed53671d24110052340c1561a6cb8d0a1fc4d262b95002c91db6d2eb8fb024388c2713b270df73ea278
 DIST newton-dynamics-2.36.rar 65378909 SHA256 d88dd127e23ff6a5cb44021937b319ab42533f4129ee7c35a77e5e6165c0f888 SHA512 aef8ef121ebbad525b3eeb5dc4da511cd357f52388d5cbf6b9709cbad497ae91f93518dc7eccc914ecf2220428ef5935b4b3fc1500804dd016443ea0fad1c058 WHIRLPOOL 1ae7aa9ec7eb88fd74bb5f54c053871dd58da4cb0e2b8578409be302c85602a1c4950b3a752ede6be0976f1d6077f55a8d8cac5bccd96ea7371af1ea97adfed0
-EBUILD newton-2.36.ebuild 854 SHA256 dac248faa94965f28376c48747091307fa45848a517940483a15e2235fb103dc SHA512 014a84ec13f97fe3f46dc52e6e73703ee922edab8bf437aadbb395d50923c79207b03e3ba1d26dcfa39d3c43d30a09a0f878a6851829ca9ab209ef9997112d73 WHIRLPOOL bc1c63a7e2ef8487d4d95c48681d067f6020baa6cc35477239707ca95da909000ff64217939919010dc2e8841fed6cc4e7d6a51747f4643186932a3c76c6ef6f
-MISC ChangeLog 1703 SHA256 fe13eb1092770da6aabf0445e3f68845541c53970121d5368cbc78dc8a019a19 SHA512 69f3d663bc4bc2d8d39963be531e813831e74362120a9ce523c35ee28ede362acd0822a4d563880efebbbad91628d22c59908d86b40c74fc713df527db8b6672 WHIRLPOOL 8a6bf4fb281da938fcab4ff2be79f8e266ed164fe07db097dab775e392322195e9743ee346b5ef164e11829a96a8eef822beb0f308021bbae4bb8a85a77d9d4e
+EBUILD newton-2.36.ebuild 854 SHA256 3d591f04e6337bbcc5646346437062e2f069604311773ec7f33df18500820f8b SHA512 bc76b893cba62f358b2582843de93b0f4117e42347b49777caeadb374eda6f9e5d1fac0903614187c31bc959db7a85953f31e6da99a67863e1963d7b8aa31476 WHIRLPOOL 43a5ff2c69d6920561be329e163b4194fa5194984027e87fe1e43c19936a476359fdb28a0a08429330339c227d9fd7c8a937d2dbfdadd6ffd24ae185260e931b
+MISC ChangeLog 1788 SHA256 9473f96e391ab96e3b9e82d81126670f8166d625dd03a4913a511462808114fa SHA512 07b512aaac54ababcb2b65c0c409b0211730f45faaf56c0ea7e7d564b52c5e2298e2238808ebae5ca6cde996d143cf56a45394eb990dc5652a7c82eba3de3591 WHIRLPOOL 61fe26c508d062b3e107d9c97ffd269296f76e78e6e6121b0b651e444c8e55ef0e44db383327ce4e4d0bd49d435792ad2fc0378b2eb1001f995c2fa30977e6fb
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
