@@ -1,10 +1,11 @@
-DEFINED_PHASES=install
-DEPEND==dev-libs/glib-2* dev-libs/libxml2 dev-games/libmaitretarot
+DEFINED_PHASES=-
+DEPEND=dev-libs/glib:2 dev-libs/libxml2 dev-games/libmaitretarot
 DESCRIPTION=backend library for the maitretarot clients
+EAPI=5
 HOMEPAGE=http://www.nongnu.org/maitretarot/
 KEYWORDS=~amd64 ppc x86
 LICENSE=GPL-2
-RDEPEND==dev-libs/glib-2* dev-libs/libxml2 dev-games/libmaitretarot
+RDEPEND=dev-libs/glib:2 dev-libs/libxml2 dev-games/libmaitretarot
 SLOT=0
 SRC_URI=http://savannah.nongnu.org/download/maitretarot/libmt_client.pkg/0.1.98/libmt_client-0.1.98.tar.bz2
-_md5_=99a85dec35bed55a39ca0d564aa53b7c
+_md5_=01ff1ff4561095eb0aebceaff59b22db
