@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile configure install prepare test unpack
 DEPEND=app-arch/unrar sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=an integrated solution for real time simulation of physics environments
-EAPI=4
+EAPI=5
 HOMEPAGE=http://code.google.com/p/newton-dynamics/
 KEYWORDS=~amd64 ~x86
 LICENSE=ZLIB
 SLOT=0
 SRC_URI=http://newton-dynamics.googlecode.com/files/newton-dynamics-2.36.rar
 _eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=3baeee1bb94ae67360aa250a2a561d53
+_md5_=9e29336f20deff820443b0a3660d52b2
