@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/newton
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/newton/ChangeLog,v 1.10 2015/01/27 08:01:44 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/newton/ChangeLog,v 1.11 2015/02/07 03:55:12 mr_bones_ Exp $
+
+  07 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> newton-2.36.ebuild:
+  EAPI=5
 
   27 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
   -files/newton-1.53-glut.patch, -newton-1.53.ebuild, -newton-2.00.ebuild:
